--- a/index.html
+++ b/index.html
@@ -533,46 +533,56 @@
               <div class="flex items-center mb-6">
                 <svg
                   class="w-10 h-10 text-[#D4AF37]"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
                   fill="none"
                   stroke="currentColor"
-                  viewBox="0 0 24 24"
-                  xmlns="http://www.w3.org/2000/svg"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
                 >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="1.5"
-                    d="M14.121 14.121L19 19m-7-7l7-7m-7 7l-2.879 2.879M12 12L9.121 9.121M3 3l3.586 3.586m5.282 5.282L16 16"
-                  ></path>
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="1.5"
-                    d="M17.5 2a2.5 2.5 0 11-5 0 2.5 2.5 0 015 0zM6.5 13a2.5 2.5 0 11-5 0 2.5 2.5 0 015 0z"
-                  ></path>
+                  <circle cx="6" cy="6" r="3"></circle>
+                  <circle cx="6" cy="18" r="3"></circle>
+                  <line x1="20" y1="4" x2="8.12" y2="15.88"></line>
+                  <line x1="14.47" y1="14.48" x2="20" y2="20"></line>
+                  <line x1="8.12" y1="8.12" x2="12" y2="12"></line>
                 </svg>
                 <h3 class="font-display text-2xl text-white ml-4">Barbería</h3>
               </div>
               <div class="space-y-4">
                 <div class="service-item">
-                  <span class="service-name">Corte de Cabello</span
+                  <span class="service-name" style="background-color: #1f2937"
+                    >Corte de Cabello</span
                   ><span class="service-line"></span
-                  ><span class="service-price">$12.000</span>
+                  ><span class="service-price" style="background-color: #1f2937"
+                    >$12.000</span
+                  >
                 </div>
                 <div class="service-item">
-                  <span class="service-name">Corte + Barba</span
+                  <span class="service-name" style="background-color: #1f2937"
+                    >Corte + Barba</span
                   ><span class="service-line"></span
-                  ><span class="service-price">$16.000</span>
+                  ><span class="service-price" style="background-color: #1f2937"
+                    >$16.000</span
+                  >
                 </div>
                 <div class="service-item">
-                  <span class="service-name">Corte + Barba + Limpieza</span
+                  <span class="service-name" style="background-color: #1f2937"
+                    >Corte + Barba + Limpieza</span
                   ><span class="service-line"></span
-                  ><span class="service-price">$22.000</span>
+                  ><span class="service-price" style="background-color: #1f2937"
+                    >$22.000</span
+                  >
                 </div>
                 <div class="service-item">
-                  <span class="service-name">Barba</span
+                  <span class="service-name" style="background-color: #1f2937"
+                    >Barba</span
                   ><span class="service-line"></span
-                  ><span class="service-price">$6.000</span>
+                  ><span class="service-price" style="background-color: #1f2937"
+                    >$6.000</span
+                  >
                 </div>
               </div>
             </div>
@@ -583,22 +593,30 @@
               <div class="flex items-center mb-6">
                 <svg
                   class="w-10 h-10 text-[#D4AF37]"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
                   fill="none"
                   stroke="currentColor"
-                  viewBox="0 0 24 24"
-                  xmlns="http://www.w3.org/2000/svg"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
                 >
                   <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="1.5"
-                    d="M20.618 5.982L18.018 3.382a2.25 2.25 0 00-3.182 0L3.382 14.836a2.25 2.25 0 000 3.182l2.6 2.6a2.25 2.25 0 003.182 0L20.618 9.164a2.25 2.25 0 000-3.182z"
+                    d="M12 2.69a6 6 0 0 0-4.62 9.61L3 17l4.39-4.39a6 6 0 1 0 4.61-9.92z"
                   ></path>
                   <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="1.5"
-                    d="M15 6l4 4"
+                    d="M15.5 6.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"
+                  ></path>
+                  <path
+                    d="M12.5 4.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"
+                  ></path>
+                  <path
+                    d="M8.5 4.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"
+                  ></path>
+                  <path
+                    d="M6.5 6.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"
                   ></path>
                 </svg>
                 <h3 class="font-display text-2xl text-white ml-4">
@@ -607,19 +625,28 @@
               </div>
               <div class="space-y-4">
                 <div class="service-item">
-                  <span class="service-name">Bloque de Color</span
+                  <span class="service-name" style="background-color: #1f2937"
+                    >Bloque de Color</span
                   ><span class="service-line"></span
-                  ><span class="service-price">$60.000</span>
+                  ><span class="service-price" style="background-color: #1f2937"
+                    >$60.000</span
+                  >
                 </div>
                 <div class="service-item">
-                  <span class="service-name">Platinado Global</span
+                  <span class="service-name" style="background-color: #1f2937"
+                    >Platinado Global</span
                   ><span class="service-line"></span
-                  ><span class="service-price">$70.000</span>
+                  ><span class="service-price" style="background-color: #1f2937"
+                    >$70.000</span
+                  >
                 </div>
                 <div class="service-item">
-                  <span class="service-name">Visos</span
+                  <span class="service-name" style="background-color: #1f2937"
+                    >Visos</span
                   ><span class="service-line"></span
-                  ><span class="service-price">$60.000</span>
+                  ><span class="service-price" style="background-color: #1f2937"
+                    >$60.000</span
+                  >
                 </div>
               </div>
             </div>
@@ -630,25 +657,30 @@
               <div class="flex items-center mb-6">
                 <svg
                   class="w-10 h-10 text-[#D4AF37]"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
                   fill="none"
                   stroke="currentColor"
-                  viewBox="0 0 24 24"
-                  xmlns="http://www.w3.org/2000/svg"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
                 >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="1.5"
-                    d="M5 3v4M3 5h4M6 17v4m-2-2h4m5-16l-3 3m0 0l3 3m-3-3H9m6 6l3 3m0 0l-3 3m3-3V9m-6 6l-3 3m0 0l3 3m-3-3h6"
-                  ></path>
+                  <rect width="18" height="18" x="3" y="3" rx="2" ry="2"></rect>
+                  <line x1="12" x2="12" y1="8" y2="16"></line>
+                  <line x1="8" x2="16" y1="12" y2="12"></line>
                 </svg>
                 <h3 class="font-display text-2xl text-white ml-4">Extras</h3>
               </div>
               <div class="space-y-4">
                 <div class="service-item">
-                  <span class="service-name">Ondulación Permanente</span
+                  <span class="service-name" style="background-color: #1f2937"
+                    >Ondulación Permanente</span
                   ><span class="service-line"></span
-                  ><span class="service-price">$55.000</span>
+                  ><span class="service-price" style="background-color: #1f2937"
+                    >$55.000</span
+                  >
                 </div>
               </div>
             </div>
@@ -660,9 +692,9 @@
       <section id="seminarios" class="py-20 bg-black animated">
         <div class="container mx-auto px-4">
           <h2 class="section-title text-center">Próximos Seminarios</h2>
-          <div class="section-divider"></div>
+          <div class="section-divider mb-16"></div>
 
-          <div class="relative mt-12">
+          <div class="relative">
             <div class="overflow-hidden">
               <div
                 id="carousel"
